--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "gh-pages -d ."
+    "deploy": "gh-pages -d"
   },
   "private": true,
   "dependencies": {
